[gd_scene load_steps=3 format=3 uid="uid://pgxlur2fj14b"]

[ext_resource type="PackedScene" uid="uid://dfl6ylmcd8v13" path="res://scenes/overlap/hurt_box.tscn" id="1_suj2e"]
[ext_resource type="Script" path="res://scripts/npc.gd" id="1_ypn2j"]

[node name="NPC" type="Node"]
script = ExtResource("1_ypn2j")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(8, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-8, 0)

[node name="HurtBox" parent="." instance=ExtResource("1_suj2e")]
